sql/backup/be_snapshot.h
@@ -59,13 +59,24 @@ class Backup: public default_backup::Backup
 {
   public:
     Backup(const Table_list &tables, THD *t_thd): 
-      default_backup::Backup(tables, t_thd, TL_READ) {};
-    virtual ~Backup() {};
+      default_backup::Backup(tables, t_thd, TL_READ) { tables_open= FALSE; };
+    virtual ~Backup()
+    {
+      if (lock_state == LOCK_ACQUIRED)
+      {
+        end_active_trans(m_thd);
+        close_thread_tables(m_thd);
+      }
+    };
     result_t begin(const size_t) { return backup::OK; };
-    result_t end();
+    result_t end() { return backup::OK; };
+    result_t get_data(Buffer &buf);
     result_t prelock() { return backup::READY; }
     result_t lock();
-    result_t unlock();
+    result_t unlock() { return backup::OK; };
+    result_t cancel() { return backup::OK; };
+  private:
+    my_bool tables_open;   ///< Indicates if tables are open
 };
 
 /**
